# AgentDbg

./: .cursorignore  .envrc  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: runapp.yml  unittest-fast.yml
agentdbg/: __init__.py  _integration_utils.py  _version.py  cli.py  config.py  constants.py  events.py  server.py  storage.py  tracing.py
agentdbg/_tracing/: _lifecycle.py
agentdbg/integrations/: __init__.py  crewai.py  langchain.py
agentdbg/ui_static/: app.js  index.html  styles.css
docs/: architecture.md  cli.md  getting-started.md  guardrails.md  index.md  integrations.md  north-star-v0-1.md  sdk.md
docs/reference/: config.md  trace-format.md
examples/demo/: guardrails.py  langchain.py
examples/langchain/: customer_support.py  issue-2184.py  minimal.py  pyproject.toml
examples/minimal/: simple_agent.py
examples/openai_agents/: minimal.py
implemenatation_plans/: 001. async-queue-based-event writer.md
maida/: cli.py  config.py  constants.py  policy.py  storage.py
maida/_tracing/: _context.py  _recorders.py
maida/integrations/: __init__.py  langchain.py
schemas/: event.schema.json  run.schema.json
tests/: conftest.py  test_cli.py  test_config.py  test_crewai_integration.py  test_events.py  test_implicit_run.py  test_integration_run_lifecycle.py  test_langchain_integration.py  test_loopdetect.py  test_redaction.py  test_server.py  test_server_path_traversal.py  test_storage.py  test_tracing.py
tests/integrations/: test_imports.py  (+1 more)
(+5 files in other folders)
