[project]
name = "agentdbg"
dynamic = ["version"]
description = "Local-first debugger for AI agents (traces, timeline UI, loop warnings)."
readme = "README.md"
authors = [
    { name = "Zafar", email = "z.tahirov@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.129.0",
    "pyyaml>=6.0.3",
    "typer>=0.23.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[project.optional-dependencies]
langchain = ["langchain>=1.2.10"]

[project.scripts]
agentdbg = "agentdbg.cli:main"

[build-system]
requires = ["hatchling>=1.28.0,<1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "agentdbg/version.py"
pattern = "^version = \"(?P<version>.*)\"$"
